<resources>
    <string name="app_name">Code Test Android</string>

    <!--    Error-->
    <string name="bad_request">Bad Request</string>
    <string name="unauthorized_user">Unauthorised User</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="connecting_server_error">Error Occur While Connecting Server</string>
    <string name="no_data">No Data</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">No Internet Connection</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>

    <!--    User-->
    <string name="user_list">User List</string>

    <!--    User Detail-->
    <string name="user_details">User Details</string>
    <string name="address_details">Address Details</string>
    <string name="street">Street</string>
    <string name="suite">Suite</string>
    <string name="city">City</string>
    <string name="zipcode">Zip Code</string>
    <string name="website">Website</string>
</resources>
