<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/bg_rounded_white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="@dimen/padding_bottom">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textAppearance="?textAppearanceBody1"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Username" />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_email_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?textAppearanceBody1"
                            android:textStyle="bold"
                            tools:text="username@gmail.com" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_phone_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:lineSpacingMultiplier="1.2"
                            android:textAppearance="?textAppearanceBody2"
                            tools:text="09-12345678" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address_details"
                            android:textAppearance="?textAppearanceBody1"
                            android:textStyle="bold"
                            tools:text="@string/address_details" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="start|center"
                                    android:layout_weight="1"
                                    android:text="@string/street"
                                    android:textAppearance="?textAppearanceBody1"
                                    android:textStyle="bold" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_street"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="end|center"
                                    android:textAppearance="?textAppearanceBody1"
                                    tools:text="@string/street" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="start|center"
                                    android:layout_weight="1"
                                    android:text="@string/suite"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    android:textStyle="bold" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_suite"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="end|center"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    tools:text="@string/suite" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="start|center"
                                    android:layout_weight="1"
                                    android:text="@string/city"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    android:textStyle="bold" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_city"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="end|center"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    tools:text="@string/city" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="start|center"
                                    android:layout_weight="1"
                                    android:text="@string/zipcode"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    android:textStyle="bold" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_zip_code"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="end|center"
                                    android:textAppearance="?attr/textAppearanceCaption"
                                    tools:text="@string/zipcode" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:background="?android:attr/selectableItemBackground"
                    android:foreground="?attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_small">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/website"
                            android:textAppearance="?textAppearanceBody1"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:lineSpacingMultiplier="1.2"
                            android:textAppearance="?textAppearanceCaption"
                            tools:text="@string/website" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/loader_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>
